# Robotics

./: README.md  Robot Code Documentation.docx  World and Launch Documentation.docx  run_me.sh  run_me2.sh  worldlaunchdocs.docx
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/kame_project/cmake/: kame_project-msg-extras.cmake  kame_project-msg-paths.cmake  kame_projectConfig.cmake
devel/share/project1/cmake/: project1-msg-extras.cmake  project1-msg-paths.cmake  project1Config.cmake
launch/: project1.launch
project2_docs/: World and Launch Documentation.docx
src/kame_project/: CMakeLists.txt  package.xml
src/kame_project/launch/: project1.launch  project2.launch  tour.launch
src/kame_project/maps/: tour_map.pgm  tour_map.yaml
src/kame_project/scripts/: tour.py
src/kame_project/src/: explore.cpp  tour.cpp
src/kame_project/worlds/: model.world
src/kame_project1/: CMakeLists.txt  package.xml
src/kame_project1/launch/: project1.launch
src/kame_project1/src/: explore.cpp
src/project1/: CMakeLists.txt  package.xml
src/project1/launch/: project1.launch
src/project1/scripts/: explore.py
src/project1/src/: explore.cpp
worlds/: project1.world
