<?xml version="1.0"?>
<package>
  <name>kame_project</name>
  <version>1.0.0</version>
  <description>The proect for robotics</description>
  <maintainer email="alex@fake.com">alex</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/alex-salad/robotics</url>
  <author email="alex@fake.com">alex</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversion</build_depend>
  <build_depend>pcl_ros</build_depend>
 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversion</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
